--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,7 +7,7 @@ body{
 h1{
     text-align: center;
     background-color: #e3f9ff;
-      padding-top: 30px;
+      padding-top: 3%;
     margin: 0;
 }
 .container{
@@ -20,9 +20,10 @@ h1{
     justify-content: center;
 }
 .calculator{
-   background-color: #3a4452; 
+   /* background-color: #3a4452;  */
    padding: 20px;
    border-radius: 10px;
+   background-color: #57555b;
 }
 .calculator form input{
     border: 0;
@@ -37,6 +38,7 @@ h1{
     cursor: pointer;
     margin: 10px;
 }
+
 form .display{
 display: flex;
 justify-content: flex-end;
@@ -52,7 +54,7 @@ form input.equal{
     width: 145px;
 }
 footer{
-     padding: 30px 0;
+     padding: 3% 0;
      text-align: center;
      /* font-size: 32px; */
      background-color: #fff;
